tests/baselines/reference/parserErrantAccessibilityModifierInModule1.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserErrantAccessibilityModifierInModule1.ts (3 errors) ====
    module M {
        var x=10;  // variable local to this module body
        private y=x;  // property visible only in module
        ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS2304: Cannot find name 'y'.
        export var z=y;  // property visible to any code
                     ~
!!! error TS2304: Cannot find name 'y'.
    }